cleaned up button events and fixed resolution dependent stretching

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,7 +1,8 @@
 /* Container needed to position the button. Adjust the width as needed */
 .container {
     position: relative;
-    width: 15%;
+    width: 120px;
+    height: 170px;
   }
   
   /* Make the image responsive */
